--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'SeoulHangangM';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/SeoulHangangM.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #f0f0f0;
@@ -65,10 +72,11 @@ textarea {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: row;
 }
 
-button {
-    padding: 10px;
+#submit-button {
+    padding: 8px 16px;
     font-size: 16px;
     background-color: #6200ea;
     color: white;
@@ -76,15 +84,32 @@ button {
     border-radius: 8px;
     cursor: pointer;
     min-height: 48px;
+    min-width: 240px;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 10px; /* 버튼 사이 간격 설정 */
+    margin-right: 12px;
 }
 
-button:hover {
+#submit-button:hover {
     background-color: #3700b3;
+}
+
+.outline-button {
+    padding: 8px 16px;
+    font-size: 16px;
+    color: black;
+    background-color: transparent;
+    border: 2px solid black;
+    border-radius: 8px;
+    cursor: pointer;
+    min-height: 48px;
+    min-width: 240px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .spinner {
@@ -107,47 +132,64 @@ button:hover {
 
 .response-section {
     margin-top: 20px;
+    margin-bottom: 20px;
     padding: 20px;
     background-color: #e0e0e0;
     border-radius: 8px;
     width: 100%;
-    max-width: 500px;
+    max-width: 1200px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
-}
-
-.response-section h2 {
-    margin-top: 0;
-    color: #6200ea;
-}
-
-.response-section p {
-    font-size: 16px;
-    line-height: 1.5;
-    color: #333;
 }
 
 .quote-container {
     position: relative;
     display: inline-block;
     text-align: center;
+    width: 100%;
+    background-color: black;
 }
 
 .quote-image {
-    width: 100%;
-    border-radius: 8px;
+    width: 50%;
 }
 
 .quote-text {
     position: absolute;
-    bottom: 16px;
+    bottom: 24px;
     left: 50%;
     transform: translateX(-50%);
     color: white;
-    background-color: rgba(0, 0, 0, 0.5);
+    -webkit-text-stroke: 0.2px black;
+    text-shadow: 0 0 2px black, 0 0 2px black, 0 0 2px black;
+    font-size: 28px;
+    font-family: 'SeoulHangangM', sans-serif; /* 서체 지정 */
+    width: 65%;
+    line-height: 1.2;
+}
+
+.x-button {
+    background-color: black;
+    color: white;
+    border-radius: 8px;
     padding: 8px 16px;
-    border-radius: 4px;
-    font-size: 16px;
+    font-size: 14px;
+    min-width: 160px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+    font-weight: 600;
+}
+
+.x-button:hover {
+    background-color: #555;
+}
+
+.x-logo {
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
 }
 
 footer {
@@ -163,7 +205,26 @@ footer p {
 }
 
 /* 추가된 미디어 쿼리 */
+@media (max-width: 768px) {
+    .quote-text {
+        font-size: 1.4rem;
+    }
+
+    .button-group {
+        flex-direction: column;
+    }
+
+    #submit-button {
+        margin-right: 0px;
+        margin-bottom: 12px;
+    }
+}
+
 @media (max-width: 480px) {
+    .quote-text {
+        font-size: 0.8rem;
+    }
+
     .instruction-text {
         font-size: 16px;
         margin-bottom: 20px;
