--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,9 +5,11 @@
     font-style: normal;
 }
 
-body {
+html, body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f0f0f0;
+    background-color: #1e2022;
+    height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
     display: flex;
@@ -16,8 +18,8 @@ body {
 }
 
 header {
-    background-color: #6200ea;
-    color: white;
+    background-color: transparent;
+    color: #f2b600;
     padding: 20px;
     width: 100%;
     text-align: center;
@@ -26,7 +28,7 @@ header {
 main {
     background-color: #ffffff;
     padding: 32px;
-    margin: 20px 0;
+    margin: 0 0 80px 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     width: 90%;
@@ -34,13 +36,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.instruction-text {
-    font-size: 24px;
-    color: #333;
-    margin-bottom: 20px;
-    text-align: center;
+    flex-grow: 1; /* 추가된 부분 */
 }
 
 form {
@@ -78,8 +74,9 @@ textarea {
 #submit-button {
     padding: 8px 16px;
     font-size: 16px;
-    background-color: #6200ea;
-    color: white;
+    font-weight: 600;
+    background-color: #f2b600;
+    color: black;
     border: none;
     border-radius: 8px;
     cursor: pointer;
@@ -93,12 +90,13 @@ textarea {
 }
 
 #submit-button:hover {
-    background-color: #3700b3;
+    background-color: #bc8d00;
 }
 
 .outline-button {
     padding: 8px 16px;
     font-size: 16px;
+    font-weight: 600;
     color: black;
     background-color: transparent;
     border: 2px solid black;
@@ -110,6 +108,16 @@ textarea {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.info-button {
+    background-color: transparent;
+    color: #6200ea;
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+    text-decoration: underline;
+    margin-top: 20px;
 }
 
 .spinner {
@@ -128,6 +136,10 @@ textarea {
     100% {
         transform: rotate(360deg);
     }
+}
+
+.supportText {
+    text-align: center;
 }
 
 .response-section {
@@ -160,9 +172,9 @@ textarea {
     left: 50%;
     transform: translateX(-50%);
     color: white;
-    -webkit-text-stroke: 0.2px black;
-    text-shadow: 0 0 2px black, 0 0 2px black, 0 0 2px black;
-    font-size: 28px;
+    -webkit-text-stroke: 0.3px black;
+    text-shadow: 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black;
+    font-size: 24px;
     font-family: 'SeoulHangangM', sans-serif; /* 서체 지정 */
     width: 65%;
     line-height: 1.2;
@@ -207,7 +219,7 @@ footer p {
 /* 추가된 미디어 쿼리 */
 @media (max-width: 768px) {
     .quote-text {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
     }
 
     .button-group {
@@ -229,8 +241,56 @@ footer p {
         font-size: 16px;
         margin-bottom: 20px;
     }
+}
 
-    form {
-        margin-bottom: 24px;
-    }
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 8px;
+    text-align: left;
+}
+
+.close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* 경고 문구 스타일 추가 */
+#errorModal .modal-content {
+    border-color: #f44336;
+    color: #f44336;
+}
+
+#errorModal .close-button {
+    color: #f44336;
+}
+
+#errorModal .close-button:hover,
+#errorModal .close-button:focus {
+    color: #d32f2f;
 }
