--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Quote Generator</title>
+    <title>Movie Scene Generator</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
     <header>
-        <h1>🎞️ Movie Quote Generator 🎬</h1>
+        <h1>🎞️ Movie Scene Generator 🎬</h1>
     </header>
     <main>
         <form method="POST" id="genre-form">
