--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,30 @@
 <!doctype html>
 <html lang="ko">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1955771036175025"
+     crossorigin="anonymous"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Scene Generator</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon"> <!-- Favicon 추가 -->
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Movie Scene Generator">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://movie-scene-generator.vercel.app/">
+    <meta property="og:image" content="{{ url_for('static', filename='images/og-image.png') }}">
+    <meta property="og:description" content="Create your own movie scenes and dialogues with the Movie Scene Generator. Select a genre, style, and decade, and let the AI generate unique scenes and quotes for you.">
+    <meta property="og:site_name" content="Movie Scene Generator">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Movie Scene Generator">
+    <meta name="twitter:description" content="Create your own movie scenes and dialogues with the Movie Scene Generator. Select a genre, style, and decade, and let the AI generate unique scenes and quotes for you.">
+    <meta name="twitter:image" content="{{ url_for('static', filename='images/og-image.png') }}">
+
 </head>
 <body>
     <header>
