--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="ko">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3V3DJ61DL6"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3V3DJ61DL6');
+    </script>
+    
+    <!-- Google adsense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1955771036175025"
      crossorigin="anonymous"></script>
 
