--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,9 @@
 
     gtag('config', 'G-3V3DJ61DL6');
     </script>
-    
-    <!-- Google adsense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1955771036175025"
-     crossorigin="anonymous"></script>
+
+    <!-- adsterra code -->
+    <script type='text/javascript' src='//pl23718420.highrevenuenetwork.com/5d/01/12/5d01120d0ac23075ad42cdd212857b83.js'></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -190,6 +189,18 @@
                 errorModal.style.display = "none";
             }
         }   
+
+        // 팝언더 광고 스크립트 실행 함수 추가
+        function triggerAdsterraPopunder() {
+            var adsterraScript = document.createElement('script');
+            adsterraScript.type = 'text/javascript';
+            adsterraScript.src = '//pl23718420.highrevenuenetwork.com/5d/01/12/5d01120d0ac23075ad42cdd212857b83.jss';
+            document.head.appendChild(adsterraScript);
+        }
+
+        document.getElementById('submit-button').addEventListener('click', () => {
+            triggerAdsterraPopunder();
+        });
     </script>
 
 </body>
