광고 활성화에 대한 안내문구 추가

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
                 </button>
                 <button type="button" id="support-button" class="outline-button">Support Creator 🍺</button>
             </div>
-            <p class="supportText">Your Support Keeps This Creative Tool Alive! ✨</p>
+            <p class="supportText">Since the AI execution costs are covered by the creator, clicking the generate button will open an advertisement.<br>Thank you for your support! ✨</p>
         </form>
         <button type="button" class="info-button" onclick="openModal()">Result Disclaimer</button>
         {% if response and not show_error_modal %}
