--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -28,7 +28,7 @@ header {
 main {
     background-color: #ffffff;
     padding: 32px;
-    margin: 0 0 80px 0;
+    margin: 0 0 48px 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     width: 90%;
@@ -225,6 +225,19 @@ textarea {
     margin-right: 8px;
 }
 
+#ad-container {
+    margin-bottom: 20px;
+}
+
+#ad-small-screen {
+    display: none;
+}
+
+#ad-large-screen {
+    display: none;
+}
+
+
 footer {
     background-color: rgba(0, 0, 0, 0.8);
     color: white;
@@ -251,6 +264,10 @@ footer p {
         margin-right: 0px;
         margin-bottom: 12px;
     }
+
+    #ad-small-screen {
+        display: block;
+    }
 }
 
 @media (max-width: 480px) {
@@ -261,6 +278,12 @@ footer p {
     .instruction-text {
         font-size: 16px;
         margin-bottom: 20px;
+    }
+}
+
+@media (min-width: 769px) {
+    #ad-large-screen {
+        display: block;
     }
 }
 
