--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Create your own movie scenes and dialogues with the Movie Scene Generator. Select a genre, style, and decade, and let the AI generate unique scenes and quotes for you.">
     <title>Movie Scene Generator</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon"> <!-- Favicon 추가 -->
