--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,32 @@
     <header>
         <h1>🎞️ Movie Scene Generator 🎬</h1>
     </header>
+    <div id="ad-container">
+        <div id="ad-small-screen">
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '8db902eb9f62b45c33af5006c90aad34',
+                    'format' : 'iframe',
+                    'height' : 50,
+                    'width' : 320,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//www.topcreativeformat.com/8db902eb9f62b45c33af5006c90aad34/invoke.js"></script>
+        </div>
+        <div id="ad-large-screen">
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : 'f8b8a5a75f567d29ca8a13484399d0ba',
+                    'format' : 'iframe',
+                    'height' : 90,
+                    'width' : 728,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//www.topcreativeformat.com/f8b8a5a75f567d29ca8a13484399d0ba/invoke.js"></script>
+        </div>
+    </div>
     <main>
         <form method="POST" id="genre-form">
             <div>
