--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,18 @@
 </head>
 <body>
     <header>
-        <h1>🎞️ Movie Scene Generator 🎬</h1>
+        <h1>Movie Scene Generator 🎬</h1>
+        <nav>
+            <ul class="nav-menu">
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="#" onclick="window.open('https://emotional-gpt.vercel.app/', '_blank')">Insideout Mindset</a>
+                        <!-- 다른 프로젝트들을 여기에 추가할 수 있습니다 -->
+                    </div>
+                </li>
+            </ul>
+        </nav>
     </header>
     <div id="ad-container">
         <div id="ad-small-screen">
