--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
                     <a href="#" class="dropbtn">Projects</a>
                     <div class="dropdown-content">
                         <a href="#" onclick="window.open('https://emotional-gpt.vercel.app/', '_blank')">Insideout Mindset</a>
-                        <a href="#" class="disable">Coming soon</a>
+                        <p class="disable">Coming soon</p>
                     </div>
                 </li>
             </ul>
@@ -63,9 +63,9 @@
                 <a href="#" onclick="window.open('https://emotional-gpt.vercel.app/', '_blank')">
                     Insideout Mindset
                 </a>
-                <a href="#" class="disable">
-                    SOON
-                </a>
+                <p class="disable">
+                    Coming soon
+                </p>
             </div>
         </nav>
     </header>
