--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,10 +5,6 @@
     font-style: normal;
 }
 
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
-
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
-
 * {
     font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
@@ -38,8 +34,8 @@ header {
 }
 
 h1 {
-    font-family: "Anton", sans-serif;
-    font-weight: bold;
+    font-family: "Russo One", sans-serif;
+    font-weight: 400;
     font-style: normal;
     text-align: left;
     margin: 0;
@@ -214,23 +210,19 @@ h1 {
 
 .mobile-dropdown-content .disable {
     font-weight: 400;
+    text-align: left;
     color: rgb(198, 198, 198);
+    padding: 20px 16px;
+    margin: 0;
 }
-
-.mobile-dropdown-content .disable:hover {
-    font-weight: 400;
-    color: rgb(198, 198, 198);
-}
-
-
 
 
 main {
-    background-color: #ffffff;
+    background-color: #2b2e32;
     padding: 32px;
     margin: 12px 0 48px 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+    border-radius: 16px;
     width: 80%;
     max-width: 800px;
     display: flex;
@@ -266,14 +258,17 @@ label {
 
 .select-box label {
     margin-bottom: 8px; /* 레이블과 선택 상자 간격 */
-    font-weight: bold; /* 레이블 텍스트 굵게 */
+    font-weight: 500; /* 레이블 텍스트 굵게 */
+    color: #bbc4d6;
 }
 
 .select-box select {
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 1px solid #6a717e;
+    border-radius: 8px;
     font-size: 16px;
+    color: #bbc4d6;
+    background-color: #222529;
 }
 
 select, textarea {
@@ -287,15 +282,20 @@ select, textarea {
 
 select {
     font-weight: 400;
-    appearance: none;
-    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20viewBox%3D%220%200%204%205%22%3E%3Cpath%20fill%3D%22%236200ea%22%20d%3D%22M2%200L0%202h4L2%200zM0%203h4L2%205%200%203z%22/%3E%3C/svg%3E'); /* 화살표 아이콘 추가 */
+    appearance: none; /* 기본 브라우저 스타일 제거 */
+    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20viewBox%3D%220%200%2010%2010%22%3E%3Cpath%20fill%3D%22%23f2b600%22%20d%3D%22M5%207L0%202h10L5%207z%22/%3E%3C/svg%3E');
     background-repeat: no-repeat;
     background-position: right 10px center;
     background-size: 12px;
+    padding-right: 30px; /* 화살표 공간을 위한 패딩 */
 }
 
 textarea {
+    border: 1px solid #6a717e;
+    border-radius: 8px;
     font-size: 16px;
+    color: #bbc4d6;
+    background-color: #222529;
     height: 100px;
     resize: none; /* 크기 조절 불가 */
 }
@@ -351,9 +351,9 @@ textarea {
     padding: 8px 16px;
     font-size: 16px;
     font-weight: 600;
-    color: black;
+    color: #cfdaf1;
     background-color: transparent;
-    border: 1px solid black;
+    border: 1px solid #bbc4d6;
     border-radius: 8px;
     cursor: pointer;
     min-height: 48px;
@@ -366,7 +366,7 @@ textarea {
 
 .info-button {
     background-color: transparent;
-    color: #6200ea;
+    color: #f2b603;
     border: none;
     cursor: pointer;
     font-size: 14px;
@@ -388,6 +388,7 @@ textarea {
     font-size: 12px;
     text-align: center;
     line-height: 1.6;
+    color: #bbc4d6;
 }
 
 .response-section {
@@ -514,6 +515,10 @@ footer p {
 
     .select-box {
         flex: 1 1 100%; /* 화면 크기가 작을 때 아이템을 세로로 배치 */
+        gap: 0px;
+    }
+
+    .select-container {
         gap: 0px;
     }
     
