--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,6 +18,10 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url('../images/bg.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: auto;
 }
 
 header {
